Homepage Version after day 1

--- a/homepage.html
+++ b/homepage.html
@@ -1,18 +1,119 @@
 <!DOCTYPE html>
 <html>
 <head>
+<link rel="stylesheet" type="text/css" href="mystyle.css">
 <title>Homepage</title>
+<hr id="firsthr">
+<div class="upper">
+<img class="img-nav" src="endava.jpg" style="width:150px;">
 <nav>
-	<ul>
+	<ul class="right-nav">
 		<li>HOME</li>
 		<li>ABOUT</li>
 		<li>PHOTOS</li>
 		<li>CONTACT US</li>
 	</ul>
 </nav>
-
+</div>
+ <hr id="secondhr">
 </head>
 <body>
+<div class="para2">
+<p id="p1">
+LOREM IPSUM
+</p>
+<p id="p2">
+Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+</p>
+<div id="button">
+<button type="button" id="but">Read</button>
+</div>
+</div>
+<div class="para3">
+<table id="table" width=50%>
+	<tr>
+		<td><hr id="newhr"/></td>
+		<td id="about" style="width:3px; padding: 0 4px; white-space:nowrap;">ABOUT US </td>
+		<td><hr id="newhr"/></td>
+	</tr>
+</table>
+<p id="para4">
+dfgbaskfs,cfnaslknflsdnkc v,s nfvasdjcvm,dfkvjas fmvafvnkjasl,vnalnlvf vnflkb.
+</p>
+<p id="para4">
+sdiukjjdkbvjflsdnvldsnvsiu fio fhisfhgiohio h iohflioh  hg foghdighh  oh vfiviogfj  iofhgvkldxn io jiof gidiofgjl iifj gildfj oi ij l jiof io glji jo .
+</p>
+</div>
+<div class="para2">
 
+<table id="table" width=50%>
+	<tr>
+		<td><hr id="newhr"/></td>
+		<td id="about" style="width:3px; padding: 0 4px; white-space:nowrap; color:white">PHOTOS </td>
+		<td><hr id="newhr"/></td>
+	</tr>
+</table>
+<p id="para4">
+
+</p>
+<div>
+<div class="member1">
+        <img src="1.jpg" class="img-responsive img-thumbnail" alt="Responsive image" />
+        <div class="name">Name
+            <br />Description</div>
+            <div class="name2">Name
+            <br />Descriptiondfcjkd edh fkjh</div>
+    </div>
+    <div class="member">
+        <img src="1.jpg" class="img-responsive img-thumbnail" alt="Responsive image" />
+        <div class="name">Name
+            <br />Description</div>
+            <div class="name2">Name
+            <br />Descriptiondfcjkd edh fkjh</div>
+    </div>
+    <div class="member">
+        <img src="1.jpg" class="img-responsive img-thumbnail" alt="Responsive image" />
+        <div class="name">Name
+            <br />Description</div>
+     <div class="name2">Name
+            <br />Descriptiondfcjkd edh fkjh</div>
+    </div>
+<p id="para4">
+
+</p>
+<p id="para4">
+
+</p>
+<div class="member1">
+        <img src="1.jpg" class="img-responsive img-thumbnail" alt="Responsive image" />
+        <div class="name">Name
+            <br />Description</div>
+            <div class="name2">Name
+            <br />Descriptiondfcjkd edh fkjh</div>
+    </div>
+    <div class="member">
+        <img src="1.jpg" class="img-responsive img-thumbnail" alt="Responsive image" />
+        <div class="name">Name
+            <br />Description</div>
+            <div class="name2">Name
+            <br />Descriptiondfcjkd edh fkjh</div>
+    </div>
+    <div class="member">
+        <img src="1.jpg" class="img-responsive img-thumbnail" alt="Responsive image" />
+        <div class="name">Name
+            <br />Description</div>
+     <div class="name2">Name
+            <br />Descriptiondfcjkd edh fkjh</div>
+    </div>
+</div>
+</div>
 </body>
+<footer>
+<div id="f">
+  <img id="imgf" src="twitter.png" style="width:30px;">
+  <img id="imgf" src="fb.png" style="width:30px;">
+  <img id="imgf" src="google.png" style="width:30px;">
+  <h id="foot">Internship Endava 2016</h>
+</div>
+</footer>
 </html>
