Final Version Day 2

--- a/homepage.html
+++ b/homepage.html
@@ -120,18 +120,18 @@ sdiukjjdkbvjflsdnvldsnvsiu fio fhisfhgiohio h iohflioh  hg foghdighh  oh vfiviog
 <p id="endava"> Endava 2016! </p>
 <div id="right">
     <p style="margin:0; padding-bottom:6px; font-family:sans-serif; color:grey; padding-right:30%;">Type Your Message</p>
-    <textarea name="Message" rows="10" cols="30" id="Message"></textarea>
+    <textarea name="Message" style="width:90%; height:200px;" id="Message"></textarea>
 </div>
 <div id="left">
 <form method="post" name="myform" onsubmit="return validateForm()">
                 <p style="margin:0; padding-bottom:6px; font-family:sans-serif; color:grey; padding-right:53%;">Your Name*</p>
-                <input type="text" name="Name" id="Name" style="margin-bottom:2%; padding-bottom:6px;" size="30" />
+                <input type="text" name="Name" id="Name" style="margin-bottom:2%; padding-bottom:6px; width:100%"/>
                 
                 <p style="margin:0; padding-bottom:6px; font-family:sans-serif; color:grey; padding-right:53%;">Your Email*</p>
-                <input type="text" name="Email" id="Email" style="margin-bottom:2%; padding-bottom:6px;" size="30" />
+                <input type="text" name="Email" id="Email" style="margin-bottom:2%; padding-bottom:6px; width:100%"  />
     
                 <p style="margin:0; padding-bottom:6px; font-family:sans-serif; color:grey; padding-right:50%; ">Contact Phone</p>
-                <input type="text" name="Phone" id="Phone" style="margin-bottom:2%; padding-bottom:6px; margin-bottom:10%;" size="30" />
+                <input type="text" name="Phone" id="Phone" style="margin-bottom:2%; padding-bottom:6px; margin-bottom:10%; width:100%"  />
                  <div id="buttonsubmit">
                     <button type="submit" id="button2">Send Message</button>
                 </div>
