--- a/homepage.html
+++ b/homepage.html
@@ -139,7 +139,14 @@ sdiukjjdkbvjflsdnvldsnvsiu fio fhisfhgiohio h iohflioh  hg foghdighh  oh vfiviog
  </div>
 </div>
 </div>
-</body>
+<nav id="responsiveFooter">
+    <ul class="right-nav">
+        <li>HOME</li>
+        <li>ABOUT</li>
+        <li>PHOTOS</li>
+        <li>CONTACT US</li>
+    </ul>
+</nav>
 <footer>
 <div id="f">
   <img id="imgf" src="twitter.png" style="width:30px;">
@@ -148,4 +155,6 @@ sdiukjjdkbvjflsdnvldsnvsiu fio fhisfhgiohio h iohflioh  hg foghdighh  oh vfiviog
   <h id="foot">Internship Endava 2016</h>
 </div>
 </footer>
+</body>
+
 </html>
